cambio en los nombres de archivos

--- a/html/alimentosp.html
+++ b/html/alimentosp.html
@@ -22,7 +22,7 @@
         <div class="container-fluid row p-0 m-0 d-flex justify-content-between contenedorHeader">
             <div class="p-0 navbar-brand col-xl-3 col-md-3 col-sm-6 col-6 order-xl-1 order-md-1 order-sm-1 order-1 m-0">
                 <a href="../index.html">
-                    <img src="../img/clifforiss_logo.png" alt="Logo Clifforiss" class="ms-4 logo">
+                    <img src="../img/clifforisslogo.png" alt="Logo Clifforiss" class="ms-4 logo">
                 </a>
             </div>
             <form class="p-0 d-flex col-xl-6 col-md-6 col-sm-12 col-12 order-xl-2 order-md-2 order-sm-3 order-3 barraTexto" role="search">
@@ -85,7 +85,7 @@
         <!-- KNINO -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/Knino.jpg" alt="Alimento Knino 25Kg" class="imgRes object-fit-cover">
+                <img src="../img/alimentoperros/knino.jpg" alt="Alimento Knino 25Kg" class="imgRes object-fit-cover">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Knino</p>
@@ -99,7 +99,7 @@
         <!-- DOG BUFFET -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/dogBuffet.jpg" alt="Alimento Dog Buffet 25Kg" class="imgRes">
+                <img src="../img/alimentoperros/dogbuffet.jpg" alt="Alimento Dog Buffet 25Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Dog Buffet</p>
@@ -113,7 +113,7 @@
         <!-- MASKOCAN -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/maskocan.jpg" alt="Alimento Maskocan 25Kg" class="imgRes">
+                <img src="../img/alimentoperros/maskocan.jpg" alt="Alimento Maskocan 25Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Masko</p>
@@ -127,7 +127,7 @@
         <!-- SABROKAN -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/sabrokan.jpg" alt="Alimento Sabrokan 25Kg" class="imgRes">
+                <img src="../img/alimentoperros/sabrokan.jpg" alt="Alimento Sabrokan 25Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Sabrokan</p>
@@ -141,7 +141,7 @@
         <!-- CACHUPIN -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/cachupin.jpg" alt="Alimento Cachupin 25Kg" class="imgRes">
+                <img src="../img/alimentoperros/cachupin.jpg" alt="Alimento Cachupin 25Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Cachupin</p>
@@ -155,7 +155,7 @@
         <!-- CHAMPION DOG -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/chDogC.jpg" alt="Alimento Champion Dog Cachorro 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/chdogc.jpg" alt="Alimento Champion Dog Cachorro 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Champion Dog</p>
@@ -168,7 +168,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/chDogARP.jpg" alt="Alimento Champion Dog Adulto Raza Pequeña 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/chdogarp.jpg" alt="Alimento Champion Dog Adulto Raza Pequeña 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Champion Dog</p>
@@ -181,7 +181,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/chDogARG.jpg" alt="Alimento Champion Dog Adulto Raza Grande 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/chdogarg.jpg" alt="Alimento Champion Dog Adulto Raza Grande 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Champion Dog</p>
@@ -195,7 +195,7 @@
         <!-- MASTER DOG -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/masterDogC.jpg" alt="Alimento Master Dog Cachorro 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/masterdogc.jpg" alt="Alimento Master Dog Cachorro 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Master Dog</p>
@@ -208,7 +208,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/masterDogARP.jpg" alt="Alimento Master Dog Adulto Raza Pequeña 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/masterdogarp.jpg" alt="Alimento Master Dog Adulto Raza Pequeña 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Master Dog</p>
@@ -221,7 +221,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/masterDogARG.jpg" alt="Alimento Master Dog Adulto Raza Grande 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/masterdogarg.jpg" alt="Alimento Master Dog Adulto Raza Grande 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Master Dog</p>
@@ -235,7 +235,7 @@
         <!-- PEDIGREE -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/pedigreeC.jpg" alt="Alimento Pedigree Cachorro 21Kg" class="imgRes">
+                <img src="../img/alimentoperros/pedigreec.jpg" alt="Alimento Pedigree Cachorro 21Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Pedigree</p>
@@ -248,7 +248,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/pedigreeARP.jpg" alt="Alimento Pedigree Adulto Raza Pequeña 21Kg" class="imgRes">
+                <img src="../img/alimentoperros/pedigreearp.jpg" alt="Alimento Pedigree Adulto Raza Pequeña 21Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Pedigree</p>
@@ -261,7 +261,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/pedigreeARG.jpg" alt="Alimento Pedigree Adulto Raza Grande 21Kg" class="imgRes">
+                <img src="../img/alimentoperros/pedigreearg.jpg" alt="Alimento Pedigree Adulto Raza Grande 21Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Pedigree</p>
@@ -275,7 +275,7 @@
         <!-- DOG CHOW -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/dogchowC.jpg" alt="Alimento Dog Chow Cachorro 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/dogchowc.jpg" alt="Alimento Dog Chow Cachorro 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Dog Chow</p>
@@ -288,7 +288,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/dogchowARP.jpg" alt="Alimento Dog Chow Adulto Raza Pequeña 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/dogchowarp.jpg" alt="Alimento Dog Chow Adulto Raza Pequeña 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Dog Chow</p>
@@ -301,7 +301,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/dogchowARG.jpg" alt="Alimento Dog Chow Adulto Raza Grande 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/dogchowarg.jpg" alt="Alimento Dog Chow Adulto Raza Grande 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Dog Chow</p>
@@ -315,7 +315,7 @@
         <!-- POWER DOG -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/powerdogC.jpg" alt="Alimento Power Dog Cachorro 10Kg" class="imgRes">
+                <img src="../img/alimentoperros/powerdogc.jpg" alt="Alimento Power Dog Cachorro 10Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Power Dog</p>
@@ -328,7 +328,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/powerdogARP.jpg" alt="Alimento Power Dog Adulto Raza Pequeña 10Kg" class="imgRes">
+                <img src="../img/alimentoperros/powerdogarp.jpg" alt="Alimento Power Dog Adulto Raza Pequeña 10Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Power Dog</p>
@@ -341,7 +341,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/powerdogARG.jpg" alt="Alimento Power Dog Adulto Raza Grande 10Kg y 18Kg" class="imgRes">
+                <img src="../img/alimentoperros/powerdogarg.jpg" alt="Alimento Power Dog Adulto Raza Grande 10Kg y 18Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Power Dog</p>
@@ -355,7 +355,7 @@
         <!-- NOMADE -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/nomadeC.jpg" alt="Alimento Nomade Cachorro 10Kg" class="imgRes">
+                <img src="../img/alimentoperros/nomadec.jpg" alt="Alimento Nomade Cachorro 10Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Nomade</p>
@@ -368,7 +368,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/nomadeARP.jpg" alt="Alimento Nomade Adulto Raza Pequeña 10Kg" class="imgRes">
+                <img src="../img/alimentoperros/nomadearp.jpg" alt="Alimento Nomade Adulto Raza Pequeña 10Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Nomade</p>
@@ -381,7 +381,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/nomadeARG.jpg" alt="Alimento Nomade Adulto Raza Grande 20Kg" class="imgRes">
+                <img src="../img/alimentoperros/nomadearg.jpg" alt="Alimento Nomade Adulto Raza Grande 20Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Nomade</p>
@@ -395,7 +395,7 @@
         <!-- FIT FORMULA -->
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/fitC.jpg" alt="Alimento Fit Formula Cachorro 10Kg" class="imgRes">
+                <img src="../img/alimentoperros/fitc.jpg" alt="Alimento Fit Formula Cachorro 10Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Fit Formula</p>
@@ -408,7 +408,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/fitARP.jpg" alt="Alimento Fit Formula Adulto Raza Pequeña 10Kg" class="imgRes">
+                <img src="../img/alimentoperros/fitarp.jpg" alt="Alimento Fit Formula Adulto Raza Pequeña 10Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Fit Formula</p>
@@ -421,7 +421,7 @@
         </article>
         <article class="card p-2 artCategoria" style="width: 15rem;">
             <div class="d-flex flex-column justify-content-center contenedorImgArt">
-                <img src="../img/alimentoP/fitARG.jpg" alt="Alimento Fit Formula Adulto Raza Grande 10Kg" class="imgRes">
+                <img src="../img/alimentoperros/fitarg.jpg" alt="Alimento Fit Formula Adulto Raza Grande 10Kg" class="imgRes">
             </div>
             <div class="card-body fw-medium p-2 bodyArt">
                 <p class="mb-0">Fit Formula</p>
