--- a/html/tienda.html
+++ b/html/tienda.html
@@ -20,7 +20,7 @@
         <div class="container-fluid row p-0 m-0 d-flex justify-content-between contenedorHeader">
             <div class="p-0 navbar-brand col-xl-3 col-md-3 col-sm-6 col-6 order-xl-1 order-md-1 order-sm-1 order-1 m-0">
                 <a href="../index.html">
-                    <img src="../img/clifforiss_logo.png" alt="Logo Clifforiss" class="ms-4 logo">
+                    <img src="../img/clifforisslogo.png" alt="Logo Clifforiss" class="ms-4 logo">
                 </a>
             </div>
             <form class="p-0 d-flex col-xl-6 col-md-6 col-sm-12 col-12 order-xl-2 order-md-2 order-sm-3 order-3 barraTexto" role="search">
