--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-fluid row p-0 m-0 d-flex justify-content-between contenedorHeader">
             <div class="p-0 navbar-brand col-xl-3 col-md-3 col-sm-6 col-6 order-xl-1 order-md-1 order-sm-1 order-1 m-0">
                 <a href="index.html">
-                    <img src="img/clifforiss_logo.png" alt="Logo Clifforiss" class="ms-4 logo">
+                    <img src="img/clifforisslogo.png" alt="Logo Clifforiss" class="ms-4 logo">
                 </a>
             </div>
             <form
@@ -111,7 +111,7 @@
             <a href="html/perros.html" class="linkCategoria">
                 <h3 class="text-center subTituloCategoria fw-bold">Sección de Perros</h3>
                 <div class="card p-2 artCategoria" style="width: 20rem;">
-                    <img src="img/c_perro.jpg" alt="Seccion de Perros" class="img-fluid imgCategoria">
+                    <img src="img/cperro.jpg" alt="Seccion de Perros" class="img-fluid imgCategoria">
                     <div class="card-body fw-medium">
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quae, ex commodi asperiores eaque debitis laudantium tempora quas omnis ratione placeat unde aliquam. Maiores blanditiis eligendi voluptatum vero cumque nam?</p>
                     </div>
@@ -123,7 +123,7 @@
             <a href="" class="linkCategoria">
                 <h3 class="text-center subTituloCategoria fw-bold">Sección de Gatos</h3>
                 <div class="card p-2 artCategoria" style="width: 20rem;">
-                    <img src="img/c_gato.jpg" alt="Seccion de Gatos" class="img-fluid imgCategoria">
+                    <img src="img/cgato.jpg" alt="Seccion de Gatos" class="img-fluid imgCategoria">
                     <div class="card-body fw-medium">
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod praesentium itaque, cupiditate ipsam unde minus nulla doloribus consequatur eligendi sunt placeat eveniet id sit ullam distinctio repudiandae quibusdam dolor exercitationem?</p>
                     </div>
@@ -135,7 +135,7 @@
             <a href="" class="linkCategoria">
                 <h3 class="text-center subTituloCategoria fw-bold">Sección de Animales Exoticos</h3>
                 <div class="card p-2 artCategoria" style="width: 20rem;">
-                    <img src="img/c_exoticos.jpg" alt="Seccion de Animales Exoticos" class="img-fluid imgCategoria">
+                    <img src="img/cexoticos.jpg" alt="Seccion de Animales Exoticos" class="img-fluid imgCategoria">
                     <div class="card-body">
                         <p class="card-text fw-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Inventore quae, ex commodi asperiores eaque debitis laudantium tempora quas omnis ratione
